Add scroll tracking and favico

--- a/fusion/templates/index.html
+++ b/fusion/templates/index.html
@@ -5,5 +5,90 @@ Home
 {% endblock %}
 
 {% block body %}
-Hello, World!
+Hello, World!<br>
+Hello, World!<br>
+
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+Hello, World!<br>
+
+{% endblock %}
+
+{% block script %}
+<script src="{{ url_for('static', filename='js/landing.js') }}"></script>
 {% endblock %}
