--- a/fusion/templates/base.html
+++ b/fusion/templates/base.html
@@ -10,6 +10,8 @@
             {% endblock %} :: Fusion 479
         </title>
 
+        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
             integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -48,6 +50,8 @@
         {% block body %}
         {% endblock %}
 
+        {% block script %}
+        {% endblock %}
     </body>
 
 </html>
