--- a/fusion/templates/base.html
+++ b/fusion/templates/base.html
@@ -1,3 +1,5 @@
+{% from "macro.html" import nav_item with context %}
+
 <!DOCTYPE html>
 <html>
 
@@ -47,6 +49,7 @@
                 firebase.analytics();
             });
         </script>
+
         {% block body %}
         {% endblock %}
 
