--- a/fusion/templates/landing.html
+++ b/fusion/templates/landing.html
@@ -12,7 +12,9 @@ Home
     <div class="row justify-content-center">
         <div class="col-3">
             <a class="nav-link" href="#about">about</a>
-            <!-- <a class="nav-link" href="{{ url_for('about') }}">about</a> -->
+        </div>
+        <div class="col-3">
+            <a class="nav-link" href="#history">history</a>
         </div>
         <div class="col-3">
             <a class="nav-link" href="{{ url_for('team') }}">team</a>
