--- a/css/main.css
+++ b/css/main.css
@@ -782,3 +782,11 @@ td.gutter {
   font-style: italic;
   font-size: 16px;
 }
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  height:20%;
+  width: auto;
+}
