--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4382,7 +4382,10 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   background-color: #f8f8f8;
   border-color: #e7e7e7;
 }
-.navbar-default .navbar-brand {
+.navbar-brand {
+  opacity: 0;
+}
+.navbar-default{
   color: #777;
 }
 .navbar-default .navbar-brand:hover,
