--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -38,7 +38,7 @@
 
 	{% if page.image and (layout.show-avatar or page.show-avatar) %}
 	<div class="avatar-container">
-	  <div class="avatar-img-border">
+	  <div class="avatar-img-border circle">
 	    <a href="{{ site.url }}">
 	      <img class="avatar-img" src="{{ page.image | prepend: site.baseurl | replace: '//', '/' }}" />
 		</a>
@@ -46,7 +46,7 @@
 	</div>
 	{% elsif site.avatar and (layout.show-avatar or page.show-avatar) %}
 	<div class="avatar-container">
-	  <div class="avatar-img-border">
+	  <div class="avatar-img-border circle">
 	    <a href="{{ site.url }} ">
 	      <img class="avatar-img" src="{{ site.avatar | prepend: site.baseurl | replace: '//', '/' }}" />
 		</a>
