--- a/css/main.css
+++ b/css/main.css
@@ -802,7 +802,11 @@ td.gutter {
   background: url("../fusion479.github.io/img/freight.jpg");
   background-size: auto;
   background-repeat: no-repeat;
-  border: 1px solid #959595;
   height: 100%;
   width: auto;
+}
+.goonpos {
+  position: absolute;
+  bottom: 8px;
+  left: 16px;
 }
