--- a/css/main.css
+++ b/css/main.css
@@ -801,9 +801,11 @@ td.gutter {
 .goon {
   background: url("../fusion479.github.io/img/freight.jpg");
   background-size: cover;
-  background-repeat: no-repeat;
   height: 100%;
-  width: auto;
+  width: 100%;
+  min-height: 100%;
+  min-width: 100%;
+  
 }
 .goonpos {
   position: absolute;
