--- a/css/main.css
+++ b/css/main.css
@@ -803,8 +803,8 @@ td.gutter {
   background-size: cover;
   height: 100%;
   width: 100%;
-  min-height: 100%;
-  min-width: 100%;
+  min-height: auto;
+  min-width: 1000px;
   
 }
 .goonpos {
