--- a/css/main.css
+++ b/css/main.css
@@ -801,9 +801,7 @@ td.gutter {
 .goon {
   background: url("../fusion479.github.io/img/freight.jpg");
   background-size: cover;
-  height: 100%;
-  width: 100%;
-  min-height: auto;
+  min-height: 1000px;
   min-width: 1000px;
   
 }
