--- a/css/main.css
+++ b/css/main.css
@@ -789,7 +789,6 @@ td.gutter {
   margin-right: auto;
   height:10%;
   width: auto;
-  text-align: center;
 }
 .circle {
   width: 10%;
@@ -798,4 +797,13 @@ td.gutter {
   font-size: 50px;
   text-align: center;
   background: white;
+}
+.goon {
+  background: url("../fusion479.github.io/img/freight.jpg");
+  min-height: 1000px;
+  min-width: 1000px;
+  float: left;
+}
+.goonpos {
+  text-align: center;
 }
