--- a/css/main.css
+++ b/css/main.css
@@ -800,8 +800,8 @@ td.gutter {
 }
 .goon {
   background: url("../fusion479.github.io/img/freight.jpg");
-  height: 1000px;
-  width: 1000px;
+  height: auto;
+  width: 50%;
   float: left;
   padding: 0px;
   margin: 0px;
