--- a/css/main.css
+++ b/css/main.css
@@ -800,7 +800,7 @@ td.gutter {
 }
 .goon {
   background: url("../fusion479.github.io/img/freight.jpg");
-  background-repeat: no-repeat;
+  background-size: no-repeat;
   height: auto;
   width: 50%;
   float: left;
