--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1583,10 +1583,10 @@ pre code {
   }
 }
 .container-fluid {
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
+  padding-right: 0px;
+  padding-left: 0px;
+  margin-right: 0px;
+  margin-left: 0px;
 }
 .row {
   margin-right: -15px;
