--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,40 @@ layout: null
 ---
 
 @import url("pygment_highlights.css");
+@font-face {
+  font-family: 'Argesta'; /*a name to be used later*/
+  src: url('../fonts/argestadisplay-regular-webfont.woff') format("truetype"); 
+}
+@font-face {
+  font-family: 'geomanistregular';
+  src: url('../fonts/Geomanist-Regular-Webfont/geomanist-regular-webfont.eot');
+  src: url('../fonts/Geomanist-Regular-Webfont/geomanist-regular-webfont.eot?#iefix') format('embedded-opentype'),
+       url('../fonts/Geomanist-Regular-Webfont/geomanist-regular-webfont.woff2') format('woff2'),
+       url('../fonts/Geomanist-Regular-Webfont/geomanist-regular-webfont.woff') format('woff'),
+       url('../fonts/Geomanist-Regular-Webfont/geomanist-regular-webfont.ttf') format('truetype'),
+       url('../fonts/Geomanist-Regular-Webfont/geomanist-regular-webfont.svg#geomanistregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
 
+}
+@font-face {
+  font-family: 'Kayak Sans Regular';
+  font-style: normal;
+  font-weight: normal;
+  src: url('../fonts/kayak-sans-cufonfonts-webfont/Kayak-Sans-Regular.woff') format('woff');
+  }
+  @font-face {
+    font-family: 'Coves';
+    font-style: normal;
+    font-weight: normal;
+    src: url('../fonts/Coves-Bold.woff') format('woff');
+    }
+  @font-face {
+    font-family: 'Coves-Light';
+    font-style: normal;
+    font-weight: normal;
+    src: url('../fonts/Coves-Light.woff') format('woff');
+    }
 /* --- General --- */
 
 body {
@@ -110,9 +143,9 @@ img {
 /* --- Navbar --- */
 
 .navbar-custom {
-  background-color: #eab676;
+  background-color: white;
   border-bottom: 1px solid #EAEAEA;
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Coves-Light';
   {% if site.navbar-img %}
   background-image: url({{ site.navbar-img }});
   background-attachment: fixed;
@@ -121,7 +154,7 @@ img {
 
 .navbar-custom .nav li a {
   text-transform: uppercase;
-  font-size: 12px;
+  font-size: 15px;
   letter-spacing: 1px;
 }
 
@@ -801,16 +834,23 @@ td.gutter {
   background: white;
 }
 
+.based{
+  margin: 0px;
+  margin-left:25%;
+  padding:0px;
+  width: 75%;
+  overflow: hidden;
+}
 .box {
   margin:0 25% 0 25%; 
   padding:0px;
   width: 100%;
   height: auto;
+  overflow: hidden;
 }
 
 .container{
   margin: 0px;
-  margin-left:0%; 
   padding:0px;
   width: 100%;
   overflow: hidden;
@@ -824,6 +864,7 @@ td.gutter {
   margin-top: -30%;
   margin-left: 0%;
   overflow: hidden;
+  filter: brightness(0.65);
 }
 .slideshow-image {
   position: absolute;
@@ -937,35 +978,61 @@ td.gutter {
     transform: scale(1);
  }
 }
-h2 {
+h3 {
   position: relative;
-  top:200px;
-  transform: translate3d(-50%, -50%, -70%);
+  top: 35vh;
   z-index: 99;
-  text-align: center;
-  font-family: 'Times New Roman', Times, serif;
+  text-align: left;
+  font-family: 'Coves-Light';
   font-weight: 300;
-  text-transform: uppercase;
-  background-color: rgba(255, 255, 255, .75);
+  color: white;
   box-shadow: 0 1em 2em -1em rgba(0, 0, 0, .5);
-  padding: 1em 2em;
+  padding: 0.3em 1.5em;
   line-height: 1.5;
-  margin-left:50%
 }
-h2 small {
+h3 small {
   display: block;
   font-size: 0.7em;
+  color:white;
 }
-h2 small:first-child {
-  border-bottom: 1px solid rgba(0, 0, 0, .25);
-  padding-bottom: 0.5em;
-}
-h2 small:last-child {
-  border-top: 1px solid rgba(0, 0, 0, .25);
+h3 small:last-child {
+  border-top: 1px solid white;
   padding-top: 0.5em;
 }
 @media (min-width: 1200px) {
   .col-lg-offset-2 {
     margin-left: 0%;
   }
+}
+@media (min-width: 768px) {
+  .navbar-left {
+    float: left !important;
+  }
+  .navbar-right {
+    float: right !important;
+    margin-right: 0px;
+  }
+  .navbar-right ~ .navbar-right {
+    margin-right: 0;
+  }
+}
+html {
+  scroll-behavior: smooth;
+ }
+ .arrow {
+  box-sizing: border-box;
+  height: 5vw;
+  width: 5vw;
+  margin-left: 3%;
+  border-style: solid;
+  border-color: white;
+  border-width: 0px 4px 4px 0px;
+  transform: rotate(45deg);
+  transition: border-width 150ms ease-in-out;
+  position: relative;
+}
+
+.arrow:hover {
+  border-bottom-width: 7px;
+  border-right-width: 7px;
 }
