--- a/css/main.css
+++ b/css/main.css
@@ -982,7 +982,7 @@ td.gutter {
   top: 50%;
 }
 h3 {
-  font-size: 30px;
+  font-size: 5vh;
   z-index: 99;
   text-align: left;
   font-family: 'Coves-Light';
