--- a/css/main.css
+++ b/css/main.css
@@ -842,7 +842,7 @@ td.gutter {
   overflow: hidden;
 }
 .box {
-  margin: 10% 0 10% 0; 
+  margin: 0; 
   padding:0px;
   width: 100%;
   height: auto;
