--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,7 @@
           {%- endfor -%}
         </ul>
       <p class="copyright text-muted">
-      {{ site.author.name }}
+      Barnatt Wu · Alif Abdullah
       &nbsp;&bull;&nbsp;
       {{ site.time | date: '%Y' }}
 
