--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ layout: null
 @import url("pygment_highlights.css");
 @font-face {
   font-family: 'Argesta'; /*a name to be used later*/
-  src: url('../fonts/argestadisplay-regular-webfont.woff') format("truetype"); 
+  src: url('../fonts/argestadisplay-regular-webfont.woff') format("truetype");
 }
 @font-face {
   font-family: 'geomanistregular';
@@ -126,6 +126,13 @@ img {
 
 .disqus-comments {
   margin-top: 30px;
+}
+
+.section3 {
+  display: flex;
+  flex-direction: row;
+  align-content: start;
+  justify-content: center;
 }
 
 @media only screen and (min-width: 768px) {
@@ -1060,4 +1067,9 @@ html {
 .sectioncontent small {
   font-family: Coves-Light;
   font-size: 0.75em;
+}
+
+.button {
+  border-left: 5px solid blue;
+  background-color: lightgray;
 }
