--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,11 +2,9 @@
 layout: base
 ---
 
-{% include header.html type="post" %}
-
 <div class="container">
-  <div class="row">
-    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+  <div class="postbox">
+{% include header.html type="post" %}
 
       {% if page.gh-repo %}
         {% assign gh_split =  page.gh-repo | split:'/'  %}
@@ -48,10 +46,6 @@ layout: base
         </div>
       {% endif %}
 
-      {% if page.social-share %}
-        {% include social-share.html %}
-      {% endif %}
-
       <ul class="pager blog-pager">
         {% if page.previous.url %}
         <li class="previous">
@@ -72,5 +66,4 @@ layout: base
           {% include fb-comment.html %}
       {% endif %}
     </div>
-  </div>
 </div>
