--- a/css/main.css
+++ b/css/main.css
@@ -482,7 +482,7 @@ footer .theme-by {
 /* --- Post and page headers --- */
 
 .intro-header {
-  margin: 80px 0 -50px;
+  margin: 80px 0px 0px 0px;
   position: relative;
 }
 .intro-header.big-img {
@@ -858,6 +858,15 @@ td.gutter {
   height: auto;
   overflow: hidden;
 }
+.postbox {
+  margin: 5%;
+  margin-right: 15%;
+  margin-left: 15%;
+  padding:0px;
+  width: 70%;
+  height: auto;
+  overflow: hidden;
+}
 
 .container{
   margin: 0px;
@@ -1070,6 +1079,27 @@ html {
 }
 
 .button {
-  border-left: 5px solid blue;
-  background-color: lightgray;
+  border: 2px solid white;
+  border-radius: 12px;
+  padding: 6px 20px;
+  font-family: Coves;
+  font-size: 0.7em;
+  color: white;
+}
+.button:hover {
+  background-color: white;
+  color: #60d7ff;
+  text-decoration: none;
+}
+@media only screen and (min-width: 768px){
+  .intro-header {
+    margin-top: 100px;
+  }
+}
+.backgroundcontainer {
+    width: 100%;
+    height: auto;
+    background: no-repeat 50% 50%;
+    background-size: cover;
+
 }
