--- a/css/main.css
+++ b/css/main.css
@@ -845,8 +845,8 @@ td.gutter {
 
 .profilecircle {
   display: inline-block;
-  width: 20vw; 
-  height: 20vw; 
+  width: 250px; 
+  height: 250px; 
   overflow: hidden; 
   border-radius: 50%;
   margin-top:5%;
@@ -861,6 +861,7 @@ td.gutter {
   display: inline-block;
   margin-top: 10%;
   margin-left: 15%;
+  font-size: 1em;
 }
 .vertical {
   border-left: 5px black;
