--- a/css/main.css
+++ b/css/main.css
@@ -845,8 +845,8 @@ td.gutter {
 
 .profilecircle {
   display: inline-block;
-  width: 250px; 
-  height: 250px; 
+  width: 25%; 
+  height: 25%; 
   overflow: hidden; 
   border-radius: 50%;
   margin-top:5%;
