--- a/css/main.css
+++ b/css/main.css
@@ -518,7 +518,7 @@ footer .theme-by {
   text-shadow: 1px 1px 3px #000;
 }
 .intro-header .page-heading h1 {
-  margin-top: 0;
+  margin-top: 20px;
   font-size: 50px;
 }
 .intro-header .post-heading h1 {
@@ -572,10 +572,10 @@ footer .theme-by {
     padding: 150px 0;
   }
   .intro-header .page-heading h1 {
-    font-size: 80px;
+    font-size: 50px;
   }
   .intro-header .post-heading h1 {
-    font-size: 50px;
+    font-size: 30px;
   }
   .intro-header.big-img .img-desc {
     font-size: 14px;
@@ -845,8 +845,8 @@ td.gutter {
 
 .profilecircle {
   display: inline-block;
-  width: 25%; 
-  height: 25%; 
+  width: 30%; 
+  height: 30%; 
   overflow: hidden; 
   border-radius: 50%;
   margin-top:5%;
@@ -859,9 +859,9 @@ td.gutter {
 }
 .profiletext {
   display: inline-block;
-  margin-top: 10%;
+  margin-top: 15%;
   margin-left: 15%;
-  font-size: 1em;
+  font-size: 0.9em;
 }
 .biocircle {
   display: inline-block;
@@ -882,7 +882,7 @@ td.gutter {
   display: inline-block;
   margin-top: 5%;
   margin-left: 15%;
-  font-size: 1em;
+  font-size: 0.6em;
 }
 .vertical {
   border-left: 5px black;
@@ -909,7 +909,7 @@ td.gutter {
   margin-right: 20%;
   margin-left: 20%;
   padding:0px;
-  width: 70%;
+  width: 60%;
   height: auto;
   overflow: hidden;
 }
@@ -1145,7 +1145,7 @@ html {
 }
 .sectioncontent5{
   font-family: Coves;
-  font-size: 4em;
+  font-size: 5vh;
   line-height: 1.4em;
 }
 
