--- a/css/main.css
+++ b/css/main.css
@@ -878,11 +878,33 @@ td.gutter {
   margin-top: -30%;
   margin-bottom: -15%;
 }
+@media (max-width:800px){
+  .biocircle {
+    display: inline-block;
+    width: 75%;
+    height: 25%; 
+    margin-left:10%;
+    overflow: hidden; 
+    border-radius: 50%;
+    margin-top:5%;
+    color:black;
+  }
+}
 .biotext {
-  display: inline-block;
+  display: block;
   margin-top: 5%;
   margin-left: 15%;
   font-size: 0.6em;
+  width:300%;
+}
+@media screen and (max-width:800px){
+  .biotext {
+    display: block;
+    margin-top: 5%;
+    margin-left: 0%;
+    font-size: 0.6em;
+    width:100%;
+  }
 }
 .vertical {
   border-left: 5px black;
@@ -1192,4 +1214,13 @@ html {
 }
 .freightfrenzypmargins {
   margin-bottom: 5%;
+}
+.bios{
+  display: flex;
+}
+
+@media screen and (max-width: 800px){
+  .bios{
+    display: inline-block;
+  }
 }
