--- a/css/main.css
+++ b/css/main.css
@@ -162,7 +162,7 @@ img {
   text-transform: uppercase;
   font-size: 15px;
   letter-spacing: 1px;
-  margin-right: 2px;
+  margin-left:25px;
 }
 
 .navbar-custom .navbar-brand,
